# aie

./: .gitignore  README.md
00_AE_Quicklinks/: README.md
01_Vibe_Check/: README.md
02_Dense_Vector_Retrieval/: Pythonic_RAG_Assignment.ipynb  README.md
02_Dense_Vector_Retrieval/aimakerspace/: vectordatabase.py
03_The_Agent_Loop/: README.md  The_Agent_Loop_Assignment.ipynb  pyproject.toml
03_The_Agent_Loop/aimakerspace/: text_utils.py
04_Agentic_RAG_From_Scratch/: Agentic_RAG_From_Scratch_Assignment.ipynb  pyproject.toml
05_Multi_Agent_with_LangGraph/: Multi_Agent_Applications_Assignment.ipynb  README.md
06_Agent_Memory/: Agent_Memory_Assignment.ipynb  README.md
07_Synthetic_Data_and_Evaluation/: Evaluating_Agents_Assignment.ipynb  Synthetic_Data_Generation_and_RAG_Evaluation_Assignment.ipynb
08_Advanced_Retrieval_and_Deep_Research/: 01_Advanced_Retrieval_Assignment.ipynb  02_Deep_Agents_Assignment.ipynb  03_Open_Deep_Research_Assignment.ipynb  Q1_2025_Investment_Review.md  pyproject.toml
08_Advanced_Retrieval_and_Deep_Research/workspace/: alternative_investments_guide.md  alternative_investments_overview.md  market_analysis_report.md  quarterly_investment_review_framework.md  user_alex_alternative_investments_recommendations.md  (+2 more)
09_Production_and_MCP/: .env.example  Session_09_LangGraph_Platform.ipynb  Session_09_MCP_Connectors_and_X_API.ipynb  Session_09_MCP_Servers.ipynb  Session_09_Production_RAG_and_Guardrails.ipynb  langgraph.json  mcp_server.py  pyproject.toml
09_Production_and_MCP/app/: __init__.py  agent.py
(+8 files in other folders)
