[project]
name = "session-09-production-and-mcp"
version = "0.1.0"
description = "Production-ready investment assistant with MCP, guardrails, and LangGraph Platform"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "guardrails-ai>=0.6.7",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.8",
    "langchain-core>=0.3.14",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=0.2.8",
    "langchain-text-splitters>=0.3.2",
    "langchain-qdrant>=0.1.4",
    "langgraph>=0.6.4",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-sdk>=0.1.38",
    "langsmith>=0.2.7",
    "mcp[cli]>=1.2.0",
    "nest-asyncio>=1.6.0",
    "pymupdf>=1.24.10",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.8.0",
    "requests>=2.32.0",
    "tiktoken>=0.7.0",
    "langchain-tavily>=0.2.17",
]
